testdata/fixtures/models/negative/plain_string_at_model_site.py
# at a model call site, but doesn't look like a model id (no hyphen/digit) —
# must never fire
model = "production"
